WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97574
[EFL] Volume button should not be shown for videos without audio
https://bugs.webkit.org/show_bug.cgi?id=97574
Summary
[EFL] Volume button should not be shown for videos without audio
Chris Dumez
Reported
2012-09-25 10:24:08 PDT
The EFL port currently display the volume button even if the video being played does not have an audio track. We should fix this to unskip: media/video-no-audio.html
Attachments
Patch
(60.50 KB, patch)
2012-09-26 09:13 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-09-26 05:29:07 PDT
This is an easy fix. Unfortunately, I identified flakiness in media controls styling and I'm still trying to debug that.
Chris Dumez
Comment 2
2012-09-26 09:13:27 PDT
Created
attachment 165820
[details]
Patch
Kenneth Rohde Christiansen
Comment 3
2012-09-26 12:30:55 PDT
Comment on
attachment 165820
[details]
Patch Oh that theming.,,
WebKit Review Bot
Comment 4
2012-09-26 12:43:04 PDT
Comment on
attachment 165820
[details]
Patch Clearing flags on attachment: 165820 Committed
r129687
: <
http://trac.webkit.org/changeset/129687
>
WebKit Review Bot
Comment 5
2012-09-26 12:43:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug