[EFL] Volume button should not be shown for videos without audio https://bugs.webkit.org/show_bug.cgi?id=97574

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-26
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

The volume control is no longer shown for videos with
no audio.

No new tests, already tested by media/video-no-audio.html.

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::hasOwnDisabledStateHandlingFor):
(WebCore):
* platform/efl/RenderThemeEfl.h:
(RenderThemeEfl):

LayoutTests:

Generate baseline for media/video-no-audio.html and unskip
it now that the volume control is no longer shown for
videos with no audio track.

Rebaseline several other media tests whose output changed
due to the fix.

* platform/efl/Skipped:
* platform/efl/media/media-controls-clone-expected.png:
* platform/efl/media/media-controls-clone-expected.txt:
* platform/efl/media/video-empty-source-expected.png:
* platform/efl/media/video-empty-source-expected.txt:
* platform/efl/media/video-no-audio-expected.png: Added.
* platform/efl/media/video-no-audio-expected.txt: Added.

Canonical link: https://commits.webkit.org/115702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129687 268f45cc-cd09-0410-ab3c-d52691b4dbfc